fixed layout issues

--- a/src/blocks/rezept/rezept.css
+++ b/src/blocks/rezept/rezept.css
@@ -1,4 +1,8 @@
 /* recipe info */
+main .section .rezept-wrapper {
+  max-width: 800px;
+}
+
 .rezept .recipe-info {
   align-items: center;
   border-bottom: 1px solid #eee;
@@ -8,9 +12,37 @@
   margin-top: 2px;
 }
 
-.rezept  .icon {
+.rezept .icon-mail,.icon-print {
   height: 22px;
   width: 22px;
+  fill: currentColor;
+  padding: 4px;
+}
+
+.rezept .icon {
+  height: 18px;
+  width: 18px;
+  fill: currentColor;
+  padding: 4px;
+}
+
+.rezept .icon-mail {
+  height: 15px;
+  width: 22px;
+  fill: currentColor;
+  padding: 4px;
+}
+
+.rezept .recipe-info .recipe-icon {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: .875rem;
+}
+
+.rezept .recipe-info .recipe-icon .recipe-level-icons {
+  display: flex;
 }
 
 .rezept .recipe-info .recipe-icon {
@@ -20,14 +52,6 @@
   justify-content: center;
 }
 
-.rezept .recipe-info .recipe-icon .recipe-level-icons {
-  display: flex;
-}
-
-.rezept .recipe-info .recipe-icon {
-  display: block;
-}
-
 .rezept .recipe-info .recipe-prep-icon,
 .recipe-cook-icon {
   display: block;
@@ -35,33 +59,11 @@
 }
 
 /* switcher */
-.rezept .switch {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  width: 100%;
-  margin-bottom: 0.25rem;
-}
-
-.rezept .switch input[type=radio] {
-  width:100%;
-  line-height: inherit;
-}
-
-.rezept .switch input[type=radio]:checked+label+.ingredients-content {
-  display:none;
-}
-
-.rezept .switch input[type=radio]:checked+label+.description-content {
-  display:none;
-}
-
-.rezept label {
+.rezept .switch label {
   font-family: FFDINWebProBold, Arial, sans-serif;
-  flex-grow: 1;
   align-items: center;
   border-bottom: 1px solid #ccc;
-  color: #172b4d;
+  color: #c4c9d2;
   cursor: pointer;
   display: flex;
   font-size: .75rem;
@@ -69,6 +71,57 @@
   text-transform: uppercase;
   transition: color .3s;
   padding-bottom: 1rem;
+}
+
+.rezept .switch {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 50px 1fr;
+  position: relative;
+}
+
+.description-content,
+.ingredients-content {
+  grid-column-end: span 2;
+  grid-column-start: 1;
+  grid-row-start: 2;
+  padding-top: 20px;
+}
+
+.rezept .switch input[type=radio] {
+  display: none;
+}
+
+.rezept .switch input[type=radio]:checked+label+.ingredients-content {
+  height: auto;
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.rezept .switch input[type=radio]:checked+label+.description-content {
+  height: auto;
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.rezept .switch input[type=radio]+label+.ingredients-content {
+  height: 0;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.rezept .switch input[type=radio]+label+.description-content {
+  height: 0;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.rezept .switch input[type=radio]:checked+label {
+  color: #172b4d;
+}
+
+.rezept .switch input[type=radio]+label {
+  color: #c4c9d2;
 }
 
 .rezept .recipe-list {
@@ -97,7 +150,7 @@
 .rezept .recipe-list .h4 {
   font-size: 1rem;
   line-height: 1.4375;
-  font-family: FFDINWebProBold,Arial,sans-serif;
+  font-family: FFDINWebProBold, Arial, sans-serif;
   margin-bottom: 10px;
 }
 
@@ -105,13 +158,14 @@
   padding: 0 20px 20px 20px;
   vertical-align: top;
 }
+
 .rezept .recipe-list td:first-child {
   text-align: right;
   white-space: nowrap;
 }
 
 .rezept .cta {
-  display:flex;
+  display: flex;
   justify-content: center;
-  gap:20px;
+  gap: 20px;
 }
